# donq-speech-brain

./: .env.example  .gitignore  LICENSE  README.md  SYSTEM_PROMPTS.md  demo.py  pyproject.toml  requirements.txt  setup.sh  system_prompt.default.txt  test_voice_llm.py  voice_llm_app.py
